[UTF-8][Japanese]

*Ver3.23 : 2019/02/20

-Pocketのシェア数が取得できなくなっていたので取得機能を削除しました。((query.yahooapis.com が突然サービス終了したため))
-デフォルトロゴを変更しました。
-静的HTML出力が無効のとき、管理者以外にはエラーメッセージを表示しないよう変更。
-管理メニューの流れを少し改善しました。
-【adiary.conf.cgi.sample】大きいファイルはテンポラリに書き出すよう変更。
-【httpd/EXE】Socket を STDIN に接続するのを止め、若干高速化しました。
-【httpd/EXE】index.htmlを有効化しました。
-【Fix】稀に最初のファイルアップロードに失敗することがある。
-【Fix】静的出力時、ヘッダにゴミが出力される。
-【Fix】致命的エラーメッセージ（初期ディレクトリ作成失敗）がきちんと表示されない。
-【Fix】大きなファイルを送信されたとき、{<$Form_options.multipart_use_temp_dir>}を設定していても、すべてメモリに展開していた。((multipart_use_temp_dirを設定していない場合、無条件にメモリに展開します。))
-他

*Ver3.22 : 2019/02/15

-【Fix】sitemapプラグインが動かない。
-【Fix】AMPプラグインにCSSが適用されない。
-【Fix】mod_perl2環境で動作が不安定。
-【Fix】インポート等のセッション画面表示がおかしい。
-【httpd/EXE】コードを若干変更。

*Ver3.21b : 2019/02/12

-内部処理を見直し、2%-5%程度処理を高速化しました。
-起動時のパス解析を更新しました。
-静的出力（エクスポート）機能を更新しました。
-テーマ選択画面を少し見やすくしました。
-【記法】Markdown式の「```～```」等の[https://adiary.org/v3man/Satsuki/block:ブロック記法]に対応しました。((シンタックスハイライトや数式記法は人によってはよく使うにもかかわらず記述方法がややこしいので、覚えやすい記法をMarkdownより輸入しました。))
-【記法】ブロック記法を若干改良しました。
-【記法】同じ内容の注釈でもセクションが異なれば別々に出力するようにしました。
-【記法】フィルター記法をはてなブログURLに対応させました。
-【Markdown】注釈記法を追加しました。
-【Markdown】[https://qiita.com/Qiita/items/c686397e4a0f4f11683d#%E6%95%B0%E5%BC%8F%E3%81%AE%E6%8C%BF%E5%85%A5:Qiitaのmathブロック記法]を追加しました。
-【httpd/EXE】max_request設定を追加し、デーモンの自動再起動を内蔵しました。((長期運用したときメモリリークしないための措置です))
-【httpd/EXE】引数を若干変更しました。
-【httpd/EXE】adiary.conf.cgiが存在しない時、自動生成するようにしました。
-【plugin】JavaScriptプラグインを更新。
-【plugin】フリー入力プラグイン（メイン部）に表示条件を選択する機能が付きました。
-【plugin】メール通知プラグイン。sendmailコマンドを止め、SMTPで送信するようになりました。
-【Fix】JavaScript強制更新用queryが一部正しくない。
-【Fix】Perl5.8で動かない。（[https://adiary.adiary.jp/0405#c3:Thanks to 漁]）
-【Fix/デザイン編集】単一記事表示の編集リンクが移動できてしまう。
-【Fix/記法】gist/githubのソース貼り付けが動作していない。
-【Fix/Markdown】コメントのみの行を、行処理してしまう。
-【Ver3.21a】Ver3.21で変更した「figure caption」の仕様を元に戻しました。((問題しかありませんでした……))
-【Ver3.21b】【Fix】テキストエリアでTABが入力できない。
-他

*Ver3.20 : 2018/12/27

-スタンドアローンHTTPサーバ機能を持った adiary.httpd.pl が開発されました。
-Windows用実行ファイル adiary.exe が開発されました。