@@ -6,9 +6,10 @@
 -デフォルトロゴを変更しました。
 -静的HTML出力が無効のとき、管理者以外にはエラーメッセージを表示しないよう変更。
 -管理メニューの流れを少し改善しました。
--【adiary.conf.cgi.sample】大きいファイルはテンポラリに書き出すよう変更。
 -【httpd/EXE】Socket を STDIN に接続するのを止め、若干高速化しました。
 -【httpd/EXE】index.htmlを有効化しました。
+-【httpd/EXE】大きいファイルをダウンロードする場合、すべてメモリに展開しないようにしました。
+-【adiary.conf.cgi.sample】大きいファイルはテンポラリに書き出すよう変更。
 -【Fix】稀に最初のファイルアップロードに失敗することがある。
 -【Fix】静的出力時、ヘッダにゴミが出力される。
 -【Fix】致命的エラーメッセージ（初期ディレクトリ作成失敗）がきちんと表示されない。
